--- a/add two numbers.html
+++ b/add two numbers.html
@@ -3,18 +3,16 @@
   <body>
     <script>
       //program to add two numbers:
-      let number1=parseInt(prompt("Enter first number:"));
-      let number2=parseInt(prompt("Enter second number:"));
+      // document.write(5+10)
+      // console.log(4+4)
 
-       let a=number(number1);
-       let b=number(number2);
-       function add(a,b){
-         let c=a+b;
-         document.write(c);
-       }
-       add(a,b);
-      let total=number1+number2;
-      document.write(` ${number1} +${number2} =${total}`);
+      //adding two numbers using prompt method
+      let firstnumber = parseInt(prompt("enter your first number"));
+      let secondnumber = parseInt(prompt("enter your second number"));
+      let sum = firstnumber + secondnumber;
+      document.write(sum);
+
+      
     </script>
   </body>
 </html>
