--- a/find-the-square-root.html
+++ b/find-the-square-root.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <script>
-      // let squareroot = prompt("enter the number")
-      // document.write(Math.sqrt(squareroot));
-      // console.log(Math.sqrt(squareroot));
-      // alert(Math.sqrt(squareroot));
 
-      let squareroot = Math.sqrt(12)
-      document.write(squareroot);
-      console.log(squareroot);
-      alert(squareroot);
-    </script>
-  </body>
+<body>
+  <script>
+    // let squareroot = prompt("enter the number")
+    // document.write(Math.sqrt(squareroot));
+    // console.log(Math.sqrt(squareroot));
+    // alert(Math.sqrt(squareroot));
+
+    // let squareroot = Math.sqrt(12)
+    // document.write(squareroot);
+    // console.log(squareroot);
+    // alert(squareroot);
+     let squareRoot = parseInt(prompt("enter number")); 
+    document.write(Math.sqrt (squareRoot));
+    console.log(Math.sqrt (squareRoot));
+
+  </script>
+</body>
+
 </html>
