--- a/dummy.html
+++ b/dummy.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-   <script>
-      let  
-   </script> 
+    <script>
+        document.write(parseInt("12"))
+    </script>
 </body>
 </html>
