--- a/factorial.html
+++ b/factorial.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
   <script>
-      let value = prompt("enter your number:");
-      
-  </script>  
+    let number = 4;
+    
+    for (let i=1; i<=number; i++){
+      fact *=i;
+    }
+    document.write(fact);
+  </script>
 </body>
+
 </html>
+
